# Me-TV

./: .bzrignore  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  README.md  SConscript  SConstruct  autogen.sh  configure.ac  me-tv-xine.1  me-tv.1  me-tv.desktop  me-tv.desktop.in  me-tv.schemas.in
help/C/: me-tv.xml
po/: LINGUAS  MeTV.pot  POTFILES.in  SConscript  ar.po  ast.po  bg.po  cs.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  fa.po  fi.po  fo.po  fr.po  gl.po  he.po  hr.po  is.po  it.po  lt.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sl.po.moved  sv.po  tr.po  uk.po  zh_CN.po  (+2 more)
src/: Makefile.am  SConscript  application.cc  application.h  atsc_text.cc  atsc_text.h  auto_record_dialog.cc  auto_record_dialog.h  buffer.cc  buffer.h  channel.cc  channel.h  channel_manager.cc  channel_manager.h  channel_stream.cc  channel_stream.h  channels_conf_line.cc  channels_conf_line.h  channels_dialog.cc  channels_dialog.h  configuration_manager.cc  configuration_manager.h  crc32.cc  crc32.h  data.cc  data.h  device_manager.cc  device_manager.h  devices_dialog.cc  devices_dialog.h  dvb_demuxer.cc  dvb_demuxer.h  dvb_frontend.cc  dvb_frontend.h  dvb_scanner.cc  dvb_scanner.h  dvb_service.cc  dvb_service.h  dvb_si.cc  dvb_si.h  (+105 more)
tests/: SConscript  buffer.cc  crc32.cc  main.cc  scan_dialog.cc  web_params.sh
tests/resources/: uk-CrystalPalace_dvbv3
www/: index.html
